We convert to URI, not URL
This fixes a deprecation warning on newer Java